p3/deployements.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transcoding
  namespace: encoding
spec:
  replicas: 1
  selector:
    matchLabels:
      podkubemetrics: "true"
  template:
    metadata:
      labels:
        podkubemetrics: "true"
    spec:
      containers:
      - name: transcoding
        image: cloudmedialab/x264-fn-events:1.0
        ports:
        - containerPort: 8080
      - name: sidecar-proxy
        image: envoyproxy/envoy:distroless-dev-1e9d667f49f8b4593de89a9d0b878e18fd00314c
        volumeMounts:
          - name: transcoding-envoy-config
            mountPath: /etc/envoy/envoy.yaml
            subPath: envoy.yaml
        ports:
        - containerPort: 10000
        - containerPort: 10001
      volumes:
      - name: transcoding-envoy-config
        configMap:
          name: transcoding-envoy-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upload-nginx
  namespace: encoding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: upload-nginx
  template:
    metadata:
      labels:
        app: upload-nginx
    spec:
      containers:
      - name: upload
        image: cloudmedialab/upload-tomcat-service:2.0
        volumeMounts:
          - name: video-transcoded
            mountPath: /app/upload 
        ports:
        - containerPort: 8080
      - name: nginx
        image: nginx:1.14.2-alpine
        volumeMounts:
          - name: video-transcoded
            mountPath: /usr/share/nginx/html
          - name: configmap-nginx
            mountPath: /etc/nginx/conf.d/default.conf
            subPath: default.conf
          - name: configmap-nginx
            mountPath: /usr/share/nginx/html/index.html
            subPath: index.html
        ports:
        - containerPort: 80
      volumes:
        - name: video-transcoded
          emptyDir: {}
        - name: configmap-nginx
          configMap:
            name: nginx-indexed
