p3/metrics.yml
apiVersion: v1
kind: Namespace
metadata:
  name: metrics
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: metrics-db
  namespace: metrics
spec:
  serviceName: database-svc
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: metrics-db
          image: mongo:8.2-noble
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-data
              mountPath: /data/db
      volumes:
        - name: mongodb-data
          persistentVolumeClaim:
            claimName: pvc-mongodb
---
apiVersion: v1
kind: Service
metadata:
  name: database-svc
  namespace: metrics
  labels:
    app: database
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  selector:
    app: database
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: metrics-app
  namespace: metrics
  labels:
    app: metrics
spec:
  selector:
    matchLabels:
      app: metrics
  template:
    metadata:
      labels:
        app: metrics
    spec:
      serviceAccountName: metrics-sa
      containers:
        - name: metrics-app
          image: twcam/podinsights:1.0
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: docker-socket
              mountPath: /var/run/docker.sock
            - name: cpuinfo
              mountPath: /monitor/cpuinfo
            - name: memstats
              mountPath: /monitor/memstats
            - name: cpustats
              mountPath: /monitor/cpustats
            - name: cgroups
              mountPath: /monitor/cgroup
            # - name: netstats
            #   mountPath: /monitor/netstats
            - name: proc
              mountPath: /monitor/proc
      volumes:
        - name: docker-socket
          hostPath:
            path: /var/run/docker.sock
        - name: cpuinfo
          hostPath:
            path: /proc/cpuinfo
        - name: memstats
          hostPath:
            path: /proc/meminfo
        - name: cpustats
          hostPath:
            path: /proc/stat
        #- name: netstats
        #  hostPath:
        #    path: /sys/class/net/ens3/statistics
        #    type: Directory
        - name: cgroups
          hostPath:
            path: /sys/fs/cgroup
        - name: proc
          hostPath:
            path: /proc
            type: Directory

---
kind: Service
apiVersion: v1
metadata:
  name: metrics-service
  namespace: metrics
spec:
  type: ClusterIP
  selector:
    app: metrics
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
