p3/gateway.yaml
# Gatway Class Config 
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gwc
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy-proxy
    namespace: encoding
  
---
#Gateway configuration
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: encoding
spec:
  gatewayClassName: envoy-gwc
  listeners:
  - name: http-80
    protocol: HTTP
    port: 80
---
#HTTP Route TRANSCODING 
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-transcoding
  namespace: encoding
spec:
  parentRefs: # Referencia al Gateway
  - name: gateway
    sectionName: http-80
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /x264-fn-events
    backendRefs: # Servicio de Transcodificación
    - name: svc-transcoding
      port: 80

---
#HTTP ROUTE UPLOAD-NGINX
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-upload
  namespace: encoding
spec:
  parentRefs:
  - name: gateway
    sectionName: http-80
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /encodedVideos
    backendRefs: 
    - name: svc-upload-nginx
      port: 80

---
#HTTP Route access metrics
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-metrics-transcoding
  namespace: metrics
spec:
  parentRefs:
  - name: gateway
    sectionName: http-80
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
      headers:
        - name: "host"
          value: "metrics.tarea.cn.uv.es"
    backendRefs: 
    - name: metrics-service
      port: 8080
